--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <!-- 引入自身注册页面的css -->
     <link rel="stylesheet" href="css/register.css">
 </head>
+
 <body>
     <div class="w">
         <!-- 1、头部 -->
@@ -22,66 +24,66 @@
         <!-- 2、主体 -->
         <div class="registerarea">
             <h3> 注册新用户
-                <div class="login">我有账号，去<a href="#">登录</a></div>
+                <div class="login">我有账号，去<a href="login.html">登录</a></div>
             </h3>
             <div class="reg_form">
-               <form action="">
-                <ul>
-                    <li>
-                        <label for="">手机号：</label>
-                        <input type="text" class="inp">
-                        <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
-                    </li>
-                    <li>
-                        <label for="">短信验证码：</label>
-                        <input type="text" class="inp">
-                        <span class="success"> <i class="success_icon"></i> 短信验证码输入正确</span>
-                    </li>
-                    <li>
-                        <label for="">登录密码：</label>
-                        <input type="password" class="inp">
-                        <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
-                    </li>
+                <form action="">
+                    <ul>
+                        <li>
+                            <label for="">手机号：</label>
+                            <input type="text" class="inp">
+                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
+                        </li>
+                        <li>
+                            <label for="">短信验证码：</label>
+                            <input type="text" class="inp">
+                            <span class="success"> <i class="success_icon"></i> 短信验证码输入正确</span>
+                        </li>
+                        <li>
+                            <label for="">登录密码：</label>
+                            <input type="password" class="inp">
+                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
+                        </li>
 
-                    <li class="safe">安全程度 <em class="ruo">弱</em>  <em class="zhong">中</em>  <em class="qiang">强</em></li>
+                        <li class="safe">安全程度 <em class="ruo">弱</em> <em class="zhong">中</em> <em class="qiang">强</em></li>
 
-                    <li>
-                        <label for="">确认密码：</label>
-                        <input type="password" class="inp">
-                        <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
-                    </li>
+                        <li>
+                            <label for="">确认密码：</label>
+                            <input type="password" class="inp">
+                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请重新输入</span>
+                        </li>
 
-                    <li class="agree"><input type="checkbox" name="" id="">同意协议并注册   <a href="#">《知晓用户协议》</a>
-                    </li>
-                    <li>
-                        <input type="submit" value="完成注册" class="btn">
-                    </li>
-                </ul>
-               </form>
+                        <li class="agree"><input type="checkbox" name="" id="">同意协议并注册 <a href="#">《知晓用户协议》</a>
+                        </li>
+                        <li>
+                            <input type="submit" value="完成注册" class="btn">
+                        </li>
+                    </ul>
+                </form>
             </div>
         </div>
         <!-- 3、底部 -->
         <footer>
             <div class="mod_copyright">
                 <div class="links">
-                     <a href="#">关于我们</a> | 
-                     <a href="#">联系我们</a> |
-                     <a href="#">联系客服</a> |
-                     <a href="#">商家入驻</a> |
-                     <a href="#">营销中心</a> |
-                     <a href="#">手机品优购</a> |
-                     <a href="#">友情链接</a> |
-                     <a href="#">销售联盟</a> |
-                     <a href="#">品优购社区</a> |
-                     <a href="#">品优购公益</a> |
-                     <a href="#">English Site Contact U</a> |
+                    <a href="#">关于我们</a> |
+                    <a href="#">联系我们</a> |
+                    <a href="#">联系客服</a> |
+                    <a href="#">商家入驻</a> |
+                    <a href="#">营销中心</a> |
+                    <a href="#">手机品优购</a> |
+                    <a href="#">友情链接</a> |
+                    <a href="#">销售联盟</a> |
+                    <a href="#">品优购社区</a> |
+                    <a href="#">品优购公益</a> |
+                    <a href="#">English Site Contact U</a> |
                 </div>
-                     <div class="copyright">
-                     地址:陕西省西安市蓝田县洩湖镇杜佳坪村*组**号 邮编:710522 电话:177****3537  传真:  010—82935100 邮箱: 2225902041@qq.com<br>
-                 陕ICP备号20006824
-                     </div>
-                 </div>
+                <div class="copyright">
+                    地址:陕西省西安市蓝田县洩湖镇杜佳坪村*组**号 邮编:710522 电话:177****3537 传真: 010—82935100 邮箱: 2225902041@qq.com<br> 陕ICP备号20006824
+                </div>
+            </div>
         </footer>
     </div>
 </body>
+
 </html>
